# ros2_nav2

./: README.md
src/fake_diff_drive/: CMakeLists.txt  package.xml
src/fake_diff_drive/launch/: sim_nav2.launch.py
src/fake_diff_drive/rviz/: nav2_sim.rviz
src/fake_diff_drive/src/: fake_diff_drive_node.cpp  fake_scan_node.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/behavior_trees/: navigate_to_pose_w_wait.xml
src/navigation/launch/: nav2_bringup.launch.py
src/navigation/map/: my_map.pgm  my_map.yaml
src/navigation/params/: nav2_params.yaml
src/navigation/scripts/: nav_goal_status_monitor.py
